WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146419
AX: PlatformSpeechSynthesizer code doesn't catch Objective-C exceptions
https://bugs.webkit.org/show_bug.cgi?id=146419
Summary
AX: PlatformSpeechSynthesizer code doesn't catch Objective-C exceptions
Simon Fraser (smfr)
Reported
2015-06-29 13:16:32 PDT
All the code in PlatformSpeechSynthesizer that calls into Objective-C needs to be wrapped in BEGIN_BLOCK_OBJC_EXCEPTIONS/END_BLOCK_OBJC_EXCEPTIONS
Attachments
patch
(3.15 KB, patch)
2015-06-29 16:09 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-06-29 13:17:03 PDT
<
rdar://problem/21597509
>
chris fleizach
Comment 2
2015-06-29 16:09:45 PDT
Created
attachment 255790
[details]
patch
WebKit Commit Bot
Comment 3
2015-06-29 17:25:00 PDT
Comment on
attachment 255790
[details]
patch Clearing flags on attachment: 255790 Committed
r186097
: <
http://trac.webkit.org/changeset/186097
>
WebKit Commit Bot
Comment 4
2015-06-29 17:25:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug