AX: PlatformSpeechSynthesizer code doesn't catch Objective-C exceptions https://bugs.webkit.org/show_bug.cgi?id=146419

Reviewed by Simon Fraser.

Make sure ObjC exception resulting from calling into the platform cause problems in WebKit.

* platform/ios/PlatformSpeechSynthesizerIOS.mm:
(-[WebSpeechSynthesisWrapper speakUtterance:]):
(-[WebSpeechSynthesisWrapper pause]):
(-[WebSpeechSynthesisWrapper resume]):
(-[WebSpeechSynthesisWrapper cancel]):
(-[WebSpeechSynthesisWrapper speechSynthesizer:didStartSpeechUtterance:]):
(WebCore::PlatformSpeechSynthesizer::initializeVoiceList):
(WebCore::PlatformSpeechSynthesizer::pause):


Canonical link: https://commits.webkit.org/164527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186097 268f45cc-cd09-0410-ab3c-d52691b4dbfc