Source/WebCore/platform/ios/PlatformSpeechSynthesizerIOS.mm
@@ -29,6 +29,7 @@
 
 #if ENABLE(SPEECH_SYNTHESIS)
 
+#include "BlockExceptions.h"
 #include "PlatformSpeechSynthesisUtterance.h"
 #include "PlatformSpeechSynthesisVoice.h"
 #include "SoftLinking.h"
@@ -95,6 +96,7 @@ SOFT_LINK_CONSTANT(AVFoundation, AVSpeechUtteranceMaximumSpeechRate, float)
     if (!utterance)
         return;
     
+    BEGIN_BLOCK_OBJC_EXCEPTIONS
     if (!m_synthesizer) {
         m_synthesizer = adoptNS([allocAVSpeechSynthesizerInstance() init]);
         [m_synthesizer setDelegate:self];
@@ -125,6 +127,7 @@ SOFT_LINK_CONSTANT(AVFoundation, AVSpeechUtteranceMaximumSpeechRate, float)
     m_utterance = utterance;
     
     [m_synthesizer speakUtterance:avUtterance];
+    END_BLOCK_OBJC_EXCEPTIONS
 }
 
 - (void)pause
@@ -132,7 +135,9 @@ SOFT_LINK_CONSTANT(AVFoundation, AVSpeechUtteranceMaximumSpeechRate, float)
     if (!m_utterance)
         return;
     
+    BEGIN_BLOCK_OBJC_EXCEPTIONS
     [m_synthesizer pauseSpeakingAtBoundary:AVSpeechBoundaryImmediate];
+    END_BLOCK_OBJC_EXCEPTIONS
 }
 
 - (void)resume
@@ -140,7 +145,9 @@ SOFT_LINK_CONSTANT(AVFoundation, AVSpeechUtteranceMaximumSpeechRate, float)
     if (!m_utterance)
         return;
     
+    BEGIN_BLOCK_OBJC_EXCEPTIONS
     [m_synthesizer continueSpeaking];
+    END_BLOCK_OBJC_EXCEPTIONS
 }
 
 - (void)cancel
@@ -148,7 +155,9 @@ SOFT_LINK_CONSTANT(AVFoundation, AVSpeechUtteranceMaximumSpeechRate, float)
     if (!m_utterance)
         return;
     
+    BEGIN_BLOCK_OBJC_EXCEPTIONS
     [m_synthesizer stopSpeakingAtBoundary:AVSpeechBoundaryImmediate];
+    END_BLOCK_OBJC_EXCEPTIONS
 }
 
 - (void)speechSynthesizer:(AVSpeechSynthesizer *)synthesizer didStartSpeechUtterance:(AVSpeechUtterance *)utterance
@@ -236,6 +245,7 @@ PlatformSpeechSynthesizer::~PlatformSpeechSynthesizer()
 
 void PlatformSpeechSynthesizer::initializeVoiceList()
 {
+    BEGIN_BLOCK_OBJC_EXCEPTIONS
     for (AVSpeechSynthesisVoice *voice in [AVSpeechSynthesisVoiceClass speechVoices]) {
         NSString *language = [voice language];
         bool isDefault = true;
@@ -248,6 +258,7 @@ void PlatformSpeechSynthesizer::initializeVoiceList()
 #endif
         m_voiceList.append(PlatformSpeechSynthesisVoice::create(voiceURI, name, language, true, isDefault));
     }
+    END_BLOCK_OBJC_EXCEPTIONS
 }
 
 void PlatformSpeechSynthesizer::pause()
